--- a/css/index_textForAnimate.css
+++ b/css/index_textForAnimate.css
@@ -1176,3 +1176,28 @@ section {
 .bottom_content .icon img{
     width: 40px;
 }
+
+#gotop {
+    position: fixed;
+    right: 20px;
+    bottom:20px;
+    z-index: 999;
+    width: 50px;
+    height: 50px;
+    background-color: var(--block_brown-op0);
+    border-radius: 50%;
+    padding: 5px;
+    cursor: pointer;
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.3s ease, transform 0.3s ease; /* 過渡效果 */
+}
+
+#gotop.show {
+    opacity: 1;
+    transform: translateY(0);
+    
+}
+#gotop:hover #arrow-img {
+    content: url(../index_images/up_arrow-p.svg);
+}
