--- a/css/index_textForAnimate.css
+++ b/css/index_textForAnimate.css
@@ -338,22 +338,23 @@ section {
     text-align: center;
     color: white;
     height: 8vw;
+    justify-content: space-between;
 }
 
 .title_white p:nth-child(4) {
-    margin-right: 10vw;
+    margin-right: 6vw;
 }
 
 .title_white p:nth-child(5) {
-    margin-left: 8vw;
+    margin-left: 10vw;
 }
 
 .title_br p:nth-child(4) {
-    margin-right: 10vw;
+    margin-right: 6vw;
 }
 
 .title_br p:nth-child(5) {
-    margin-left: 8vw;
+    margin-left: 10vw;
 }
 
 .banner-content .title_br {
@@ -361,6 +362,7 @@ section {
     font-size: 18.2vw;
     text-align: center;
     color: var(--block_brown);
+    justify-content: space-between;
 
 
 }
