圖片壓縮更新

--- a/css/index.css
+++ b/css/index.css
@@ -598,7 +598,7 @@ section {
 #QUALITY .pic_box {
     width: 100%;
     height: 100%;
-    background-image: url(../index_images/quality_justpic.png);
+    background-image: url(../index_images/quality_justpic);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
