--- a/css/index_textForAnimate.css
+++ b/css/index_textForAnimate.css
@@ -451,7 +451,7 @@ section {
 #CUSTOMIZED {
     width: 100%;
     /* height: 100%; */
-    background-image: url(../index_images/bg-customized3.svg);
+    background-image: url(../index_images/bg-customized3.jpg);
     background-size: cover;
     text-align: center;
     background-repeat: no-repeat;
