--- a/css/Customization.css
+++ b/css/Customization.css
@@ -1063,7 +1063,7 @@ body {
     height: 510px;
     /* margin-top: 0px; */
     /* background-color: #FFFFFF; */
-    background-image: url(../images/Custom_block/menu-background.svg);
+    background-image: url(../images/Custom_block/menu-background1.png);
     position: relative;
 }
 
@@ -1961,7 +1961,7 @@ body {
     align-items: center;
     /* margin-top: 86px; */
     /* background-color: #FFFFFF; */
-    background-image: url(../images/Custom_block/menu-background.svg);
+    background-image: url(../images/Custom_block/menu-background1.png);
     position: relative;
 }
 
