--- a/css/Customization.css
+++ b/css/Customization.css
@@ -3397,6 +3397,7 @@ footer .logo {
     color: #3F1A09;
     font-size: 25px;
     font-weight: 500;
+    cursor: pointer;
 }
 
 #minus1 {
@@ -3407,6 +3408,7 @@ footer .logo {
     color: #3F1A09;
     font-size: 25px;
     font-weight: 500;
+    cursor: pointer;
 }
 
 
@@ -3449,6 +3451,7 @@ footer .logo {
     color: #3F1A09;
     font-size: 25px;
     font-weight: 500;
+    cursor: pointer;
 }
 
 
@@ -3461,6 +3464,7 @@ footer .logo {
     color: #3F1A09;
     font-size: 25px;
     font-weight: 500;
+    cursor: pointer;
 }
 
 
@@ -4535,6 +4539,7 @@ footer .logo {
     color: #3F1A09;
     font-size: 25px;
     font-weight: 500;
+    cursor: pointer;
 }
 
 #minus3 {
@@ -4545,6 +4550,7 @@ footer .logo {
     color: #3F1A09;
     font-size: 25px;
     font-weight: 500;
+    cursor: pointer;
 }
 
 
@@ -4580,6 +4586,7 @@ footer .logo {
     color: #3F1A09;
     font-size: 25px;
     font-weight: 500;
+    cursor: pointer;
 }
 
 #minus4 {
@@ -4590,6 +4597,7 @@ footer .logo {
     color: #3F1A09;
     font-size: 25px;
     font-weight: 500;
+    cursor: pointer;
 }
 
 
